(PC-23898)[PRO] fix: broken style

--- a/pro/src/pages/Offerers/Offerer/OffererDetails/ApiKey/ApiKey.module.scss
+++ b/pro/src/pages/Offerers/Offerer/OffererDetails/ApiKey/ApiKey.module.scss
@@ -20,7 +20,7 @@
   .list {
     display: flex;
     flex-direction: column;
-    margin: rem.torem(24px) 0;
+    margin-top: rem.torem(24px);
 
     .item {
       align-items: center;
@@ -53,7 +53,7 @@
   }
 
   .generate {
-    margin-top: rem.torem(16px);
+    margin-top: rem.torem(24px);
     min-width: rem.torem(180px);
   }
 }
