--- a/pro/src/pages/Offerers/Offerer/OffererDetails/Venues/VenueItem/VenueItem.module.scss
+++ b/pro/src/pages/Offerers/Offerer/OffererDetails/Venues/VenueItem/VenueItem.module.scss
@@ -1,10 +1,10 @@
 @use "styles/mixins/_rem.scss" as rem;
 @use "styles/mixins/_fonts.scss" as fonts;
 
-li {
+.venue-item {
   display: flex;
   width: 100%;
-  
+
   &:not(:last-child) {
 		margin-bottom: rem.torem(24px);
 	}
@@ -12,6 +12,7 @@ li {
 
 .name {
   @include fonts.title3;
+  
   margin-bottom: rem.torem(8px);
 }
 
